Fixed: finbugs issues